# stock-scanner

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.json
data/: prices.csv  sample_prices.csv
src/: indicators.py  main.py
tests/: test_avg_close.py  test_cli_output.py  test_cli_rsi.py  test_latest_close.py  test_rsi.py
