[tool]
name = "stock-scanner"
version = "0.1.0"
description = "A command line tool for scanning stocks based on technical indicators and identifying trading opportunities."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"

[tool.poetry.scripts]
stock-scanner = "src.main:main"